<resources>
    <string name="app_name" translatable="false">BeerBeacon</string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>

    <string name="label_ibu" translatable="false">IBU</string>
    <string name="label_abv" translatable="false">ABV</string>
    <string name="label_estilo">Estilo</string>
    <string name="label_cerveja">Cerveja</string>
    <string name="label_btn_pedir">Pedir</string>
    <string name="coin_locale">R$</string>

    <!-- Nós json firebase -->
    <string name="fb_consumacao" translatable="false">consumacao</string>
    <string name="fb_taps" translatable="false">taps</string>
    <string name="fb_taps_medidas" translatable="false">medidas</string>
    <!-- Nós json firebase -->

    <!-- Campos json firebase -->
    <string name="pedido_qtd" translatable="false">qtd</string>
    <string name="pedido_preco" translatable="false">preco</string>
    <string name="taps_abv" translatable="false">ABV</string>
    <string name="taps_ibu" translatable="false">IBU</string>
    <string name="taps_cerveja" translatable="false">cerveja</string>
    <string name="taps_cervejaria" translatable="false">cervejaria</string>
    <string name="taps_data_entrada" translatable="false">data_entrada</string>
    <string name="taps_img_cerveja" translatable="false">img_cerveja</string>
    <string name="taps_img_cervejaria" translatable="false">img_cervejaria</string>
    <string name="taps_status" translatable="false">status</string>
    <string name="taps_bid" translatable="false">bid</string>
    <string name="taps_estilo" translatable="false">estilo</string>
    <string name="taps_nota" translatable="false">nota</string>
    <string name="taps_medida_preco" translatable="false">preco</string>
    <string name="taps_medida_quantidade" translatable="false">quantidade</string>
    <!-- Campos json firebase-->

</resources>
