<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp"
    android:layout_margin="4dp"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- content header line -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgContentTop"
            android:paddingBottom="7dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="7dp">

            <TextView
                android:id="@+id/head_text_marca_chopp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:text="@string/price_mock"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textSize="20sp"-->
                <!--android:textStyle="bold" />-->

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:src="@drawable/menu_icon" />-->

        </RelativeLayout>

        <!-- content header image -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/head_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/head_image" />

            <TextView
                android:id="@+id/head_text_ibu"
                style="@style/ContentImageBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/head_image"
                android:layout_alignStart="@id/head_image"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"/>

            <TextView
                style="@style/ContentImageBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/head_text_ibu"
                android:layout_alignStart="@id/head_text_ibu"
                android:paddingStart="20dp"
                android:text="@string/label_ibu" />

            <TextView
                android:id="@+id/head_text_estilo"
                style="@style/ContentImageBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/head_image"
                android:layout_alignEnd="@id/head_image"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"/>

            <TextView
                style="@style/ContentImageBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/head_text_estilo"
                android:layout_alignStart="@id/head_text_estilo"
                android:text="@string/label_estilo" />

            <TextView
                android:id="@+id/head_text_abv"
                style="@style/ContentImageBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/head_image"
                android:layout_centerHorizontal="true"
                android:paddingBottom="10dp"/>

            <TextView
                style="@style/ContentImageBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/head_text_abv"
                android:layout_alignStart="@id/head_text_abv"
                android:text="@string/label_abv" />


        </RelativeLayout>

        <!-- content body layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgContent"
            android:orientation="vertical"
            android:paddingBottom="6dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="9dp">

            <!-- avatar and name part -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/content_avatar_title"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/label_cerveja" />

                <ImageView
                    android:id="@+id/content_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content_avatar_title"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar" />

                <TextView
                    android:id="@+id/nome_composto_marca_cerveja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/content_avatar"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/content_avatar"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/content_rating_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/nome_composto_marca_cerveja"
                    android:layout_below="@id/nome_composto_marca_cerveja"
                    android:src="@drawable/stars" />

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignBottom="@+id/content_rating_stars"-->
                    <!--android:layout_marginBottom="-2dp"-->
                    <!--android:layout_marginStart="3dp"-->
                    <!--android:layout_toEndOf="@id/content_rating_stars"-->
                    <!--android:text="@string/rating_mock"-->
                    <!--android:textColor="@color/contentBadgeTitle"-->
                    <!--android:textSize="12sp" />-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:src="@drawable/arrow" />-->

            </RelativeLayout>

            <!-- divider line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="9dp"
                android:src="@color/contentDividerLine" />

            <!-- addresses part -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <!--<TextView-->
                        <!--android:id="@+id/content_from_badge"-->
                        <!--style="@style/ContentMainBadgeTitle"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_alignParentStart="true"-->
                        <!--android:text="@string/from_badge" />-->

                    <TextView
                        android:id="@+id/text_volume_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/mainTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_preco_volume_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/text_volume_1"
                        android:layout_below="@id/text_volume_1"
                        android:textColor="@color/mainTextColor"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/check_chopp_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:buttonTint="@color/btnRequest"/>
                </RelativeLayout>

            </LinearLayout>

            <!-- divider line -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="7dp"
                android:src="@color/contentDividerLine" />

            <!-- dates part -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <!--<TextView-->
                        <!--android:id="@+id/content_delivery_date_badge"-->
                        <!--style="@style/ContentMainBadgeTitle"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_alignParentStart="true"-->
                        <!--android:text="@string/delivery_date_badge" />-->

                    <TextView
                        android:id="@+id/text_volume_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/mainTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_preco_volume_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/text_volume_2"
                        android:layout_below="@id/text_volume_2"
                        android:textColor="@color/mainTextColor"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/check_chopp_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:buttonTint="@color/btnRequest"/>
                </RelativeLayout>

            </LinearLayout>

            <!-- request button -->
            <TextView
                android:id="@+id/btn_solicitar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/btnRequest"
                android:padding="10dp"
                android:text="@string/label_btn_pedir"
                android:textAlignment="center"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/btn_annotation_mock"
                android:textAlignment="center"
                android:textColor="@color/contentBadgeTitle"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

