<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgContent"
    android:baselineAligned="false"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!-- LEFT TITLE PART -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_weight="3"
            android:background="@color/bgTitleLeft"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/title_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/title_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/title_time_label"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />


        </RelativeLayout>
        <!-- RIGHT TITLE PART -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bgTitleRight"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="15dp"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/title_from_to_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/from_to_purple" />

            <TextView
                android:id="@+id/marca_chopp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/title_from_to_dots"
                android:layout_marginTop="-5dp"
                android:layout_toEndOf="@+id/title_from_to_dots"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/title_from_to_dots_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/marca_chopp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/title_from_to_dots"
                android:src="@color/contentDividerLine" />

            <TextView
                android:id="@+id/nome_chopp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_from_to_dots_divider"
                android:layout_toEndOf="@id/title_from_to_dots"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/nome_chopp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:textAlignment="center">

                    <TextView
                        style="@style/TitleBadgeTitle"
                        android:id="@+id/label_ibu"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_ibu" />

                    <TextView
                        style="@style/TitleBadgeTitle"
                        android:id="@+id/label_abv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_abv" />

                    <TextView
                        style="@style/TitleBadgeTitle"
                        android:id="@+id/label_estilo"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/label_estilo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/value_ibu"
                        style="@style/TitleBadgeText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/value_abv"
                        style="@style/TitleBadgeText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/value_estilo"
                        style="@style/TitleBadgeText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
